--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Loic Nogues - Web developer
+title: Loïc Nogues - Web developer
 email: nogues.loic@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Web Developer
@@ -7,7 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username: m0g
 github_url: "https://github.com/m0g/"
-h1: Loic Nogues
+h1: Loïc Nogues
 subtitle: Web developer
 
 # Build settings
